name:                json-api
version:             0.1.1.1
homepage:            https://github.com/toddmohney/json-api
bug-reports:         https://github.com/toddmohney/json-api/issues
license:             MIT
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
copyright:           2016 Todd Mohney, 2018 Ian Duncan
category:            Network
build-type:          Simple
cabal-version:       >=1.10
stability:           experimental
tested-with:         GHC == 7.10.3
synopsis:            Utilities for generating JSON-API payloads
description:
  Provides utilities for deriving JSON payloads conformant to the json-api
  specification

extra-source-files:
  README.md
  LICENSE
  circle.yml
  stack.yaml
  example/LICENSE
  example/README.md
  example/example.cabal
  example/*.hs
  example/stack.yaml

source-repository head
  type: git
  location: https://github.com/toddmohney/json-api.git

library
  build-depends: aeson
               , base                 >= 4.7 && < 5.0
               , containers
               , data-default
               , dlist
               , hashable
               , lens
               , lens-aeson
               , text
               , unordered-containers
               , uri-bytestring
               , these
               , transformers
               , vector

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    OverloadedStrings
    RecordWildCards
    TemplateHaskell

  exposed-modules:
    Network.JSONApi
    Network.JSONApi.Error
    Network.JSONApi.Document
    Network.JSONApi.Identifier
    Network.JSONApi.Meta
    Network.JSONApi.Link
    Network.JSONApi.Resource

  other-modules:

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds
    -fwarn-unused-imports

  hs-source-dirs: src

test-suite json-api-test
  build-depends: aeson
               , aeson-pretty
               , base         >= 4.7 && < 5.0
               , bytestring
               , containers
               , data-default
               , hspec
               , json-api
               , lens
               , lens-aeson
               , text
               , unordered-containers
               , uri-bytestring
               , vector

  default-language:    Haskell2010

  default-extensions:
    DeriveGeneric
    GeneralizedNewtypeDeriving
    FlexibleInstances
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    QuasiQuotes

  ghc-options:
    -Wall
    -fwarn-unused-matches
    -fwarn-unused-binds

  hs-source-dirs: test

  main-is: Spec.hs

  other-modules:
    Network.JSONApi.ErrorSpec
    Network.JSONApi.DocumentSpec
    Network.JSONApi.IdentifierSpec
    Network.JSONApi.MetaSpec
    Network.JSONApi.ResourceSpec
    TestHelpers

  type: exitcode-stdio-1.0

source-repository head
  type:     git
  location: https://github.com/toddmohney/json-api
